[tool.poetry]
name = "chatbot-heroku"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatbot_heroku"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"
line-bot-sdk = "^2.4.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
